# wasmer-rust-example

./: Cargo.toml  README.md
.circleci/: config.yml
rust-embedder-app/: Cargo.toml  README.md
rust-embedder-app/src/: main.rs
src/: main.rs
wasm-sample-app/: Cargo.toml  README.md
wasm-sample-app/src/: lib.rs
